feat: remap query virtual columns to clustered base table columns when equivalent